# graff

./: CHANGELOG.md  Cargo.dist.toml  Cargo.toml  PROGRESS.md  README.md  dist-workspace.toml  implementation-plan.toml
.github/workflows/: generate-examples.yml  release.yml
docs/: api.md  architecture.md  examples.md  release-guide.md
scripts/: README.md  generate-docs.sh  generate-examples.sh  release.sh
src/: cli.rs  main.rs  spec.rs
src/chart/: area.rs  bar.rs  bar_stacked.rs  funnel.rs  heatmap.rs  line.rs  mod.rs  retention.rs  scatter.rs  types.rs
src/data/: derive.rs  loader.rs  mod.rs  transform.rs
src/render/: mod.rs  styling.rs
tests/: integration_tests.rs
tests/fixtures/: bar_test.yaml  demo_spec.yaml  ga4_channels.csv  ga4_events.csv  ga4_users.csv  ga4_yyyymmdd.csv  invalid_columns_spec.yaml  invalid_spec.yaml  mixed_timestamps.csv  render_test.yaml  test_spec.yaml  timestamp_spec.yaml  yyyymmdd_spec.yaml
