[package]
name = "graff"
version = "1.0.2"
edition = "2024"
authors = ["Isaac SJ"]
description = "Fast, deterministic Rust CLI for converting CSV data into beautiful PNG/SVG/PDF charts"
license = "MIT"
repository = "https://github.com/umi-labs/graff"
homepage = "https://github.com/umi-labs/graff"
keywords = ["cli", "charts", "csv", "data-visualization", "analytics"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Data processing
polars = { version = "0.35", features = ["lazy", "csv", "dtype-date", "dtype-datetime", "temporal", "round_series"] }

# Chart rendering
plotters = "0.3"
plotters-bitmap = "0.3"
plotters-svg = "0.3"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency and utilities
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
# Testing
insta = "1.34"
tempfile = "3.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


